--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,13 @@
-*
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container{
+  max-width: 1100px;
+  margin: 0 auto;
+}
 
 .d-flex{
   display: flex;
@@ -9,11 +18,24 @@
   display: none;
 }
 
-
-
 .emailbox{
   justify-content: center;
   align-items: center;
   flex-direction: column;
   background-color: greenyellow;
+  margin: 20 0 20 0;
+}
+
+.email{
+  flex-direction: column;
+  margin: 20 0 20 0;
+}
+
+
+#btn{
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  padding: 5px;
+  margin-top: 30px;
 }
